# bmp2xpm

./: .gitignore  Bmp.hs  Conversion.hs  LICENSE  Main.hs  README  README.md  TODO.md  Xpm.hs  bmp2xpm.cabal  notes.txt  palette.c  stack.yaml
src/: Bmp.hs  Conversion.hs  Xpm.hs
