name:                bmp2xpm
version:             0.0.1
synopsis:            An embarrassingly simple image conversion program.
homepage:            https://gitorious.org/junkdrawer/bmp2xpm/
license:             BSD3
license-file:        LICENSE
author:              Sajith Sasidharan
maintainer:          sajith@nonzen.in
build-type:          Simple
cabal-version:       >=1.10

Flag prof
    Description:  Turn on profiling.
    Default:      False

Flag eventlog
    Description:  Turn on eventlog.
    Default:      False

executable bmp2xpm
    main-is:          Main.hs

    build-depends:    base
                    , binary
                    , directory
                    , filepath
                    , bytestring
                    , containers
                    , text
                    , formatting
                    , parallel
                    , deepseq
                    , vector

    default-language: Haskell2010

    if flag(prof)
        ghc-options: -threaded -O2 -Wall -rtsopts -prof -auto-all -fno-warn-orphans -fno-warn-missing-methods

    if flag(eventlog)
        ghc-options: -threaded -O2 -Wall -rtsopts -eventlog -fno-warn-orphans -fno-warn-missing-methods

    ghc-options: -threaded -O2 -Wall -fno-warn-orphans -fno-warn-missing-methods


