name:                bmp2xpm
version:             0.0.1
synopsis:            An embarrassingly simple image conversion program.
homepage:            https://gitorious.org/junkdrawer/bmp2xpm/
license:             MIT
license-file:        LICENSE
author:              Sajith Sasidharan
maintainer:          sajith@nonzen.in
build-type:          Simple
cabal-version:       >=1.10

Flag prof
    Description:  Turn on profiling.
    Default:      False

Flag eventlog
    Description:  Turn on eventlog.
    Default:      False

executable bmp2xpm
    main-is:          Main.hs

    build-depends:    base
                    , binary
                    , directory
                    , filepath
                    , bytestring
                    , containers
                    , text
                    , formatting
                    , parallel
                    , deepseq

    default-language: Haskell2010

    default-extensions: OverloadedStrings

    if flag(prof)
        ghc-options: -threaded -O2 -Wall -rtsopts -prof -auto-all

    if flag(eventlog)
        ghc-options: -threaded -O2 -Wall -rtsopts -eventlog

    ghc-options: -threaded -O2 -Wall

