cabal-version: >=1.10
name:          bmp2xpm
version:       0.0.1
license:       MIT
license-file:  LICENSE
maintainer:    sajith@nonzen.in
author:        Sajith Sasidharan
homepage:      https://gitorious.org/junkdrawer/bmp2xpm/
synopsis:      An embarrassingly simple image conversion program.
build-type:    Simple

flag prof
    description: Turn on profiling.
    default:     False

flag eventlog
    description: Turn on eventlog.
    default:     False

executable bmp2xpm
    main-is:            Main.hs
    hs-source-dirs:     src
    other-modules:
        Bmp
        Conversion
        Xpm

    default-language:   Haskell2010
    default-extensions: OverloadedStrings DeriveGeneric
    ghc-options:        -threaded -O2 -Wall
    build-depends:
        base -any,
        binary -any,
        directory -any,
        filepath -any,
        bytestring -any,
        containers -any,
        text -any,
        formatting -any,
        parallel -any,
        deepseq -any

    if flag(prof)
        ghc-options: -threaded -O2 -Wall -rtsopts -prof -auto-all

    if flag(eventlog)
        ghc-options: -threaded -O2 -Wall -rtsopts -eventlog
